# cpp-music

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
include/tnt/music/: note.hpp
src/: CMakeLists.txt  music.cpp  note.cpp
test/: CMakeLists.txt  note_test.cpp  xml_test.cpp
